--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Tao_Bot_Maker</RootNamespace>
     <AssemblyName>Tao_Bot_Maker</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -27,6 +27,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -51,6 +52,9 @@
     <ApplicationIcon>tao.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LogFramework">
+      <HintPath>..\..\..\Log\LogFramework\bin\Debug\LogFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -64,16 +68,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action.cs" />
-    <Compile Include="Action_Attente.cs" />
-    <Compile Include="Action_Boucle.cs" />
-    <Compile Include="Action_Clic.cs" />
-    <Compile Include="Action_Image.cs" />
-    <Compile Include="Action_Sequence.cs" />
-    <Compile Include="Action_Si_Image.cs" />
-    <Compile Include="Action_Touche.cs" />
     <Compile Include="Bot.cs" />
-    <Compile Include="DrawingRectangle.cs">
+    <Compile Include="Controller\ActionController.cs" />
+    <Compile Include="Controller\ActionClickController.cs" />
+    <Compile Include="Controller\ActionLoopController.cs" />
+    <Compile Include="Controller\ActionIfPictureController.cs" />
+    <Compile Include="Controller\ActionSequenceController.cs" />
+    <Compile Include="Controller\ActionPictureWaitController.cs" />
+    <Compile Include="Controller\ActionKeyController.cs" />
+    <Compile Include="Controller\ActionWaitController.cs" />
+    <Compile Include="Controller\ImageSearchController.cs" />
+    <Compile Include="View\DrawingRectangle.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainApp.cs">
@@ -82,10 +87,66 @@
     <Compile Include="MainApp.Designer.cs">
       <DependentUpon>MainApp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Action.cs" />
+    <Compile Include="Model\ActionWait.cs" />
+    <Compile Include="Model\ActionLoop.cs" />
+    <Compile Include="Model\ActionClick.cs" />
+    <Compile Include="Model\ActionPictureWait.cs" />
+    <Compile Include="Model\ActionSequence.cs" />
+    <Compile Include="Model\ActionIfPicture.cs" />
+    <Compile Include="Model\ActionKey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sequence.cs" />
-    <Compile Include="SequenceXmlManager.cs" />
+    <Compile Include="Controller\SequenceXmlManager.cs" />
+    <Compile Include="View\ActionClickPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ActionClickPanel.Designer.cs">
+      <DependentUpon>ActionClickPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ActionIfPicturePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ActionIfPicturePanel.Designer.cs">
+      <DependentUpon>ActionIfPicturePanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ActionKeyPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ActionKeyPanel.Designer.cs">
+      <DependentUpon>ActionKeyPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ActionLoopPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ActionLoopPanel.Designer.cs">
+      <DependentUpon>ActionLoopPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ActionPictureWaitPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ActionPictureWaitPanel.Designer.cs">
+      <DependentUpon>ActionPictureWaitPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ActionSequencePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ActionSequencePanel.Designer.cs">
+      <DependentUpon>ActionSequencePanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ActionView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ActionView.Designer.cs">
+      <DependentUpon>ActionView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ActionWaitPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ActionWaitPanel.Designer.cs">
+      <DependentUpon>ActionWaitPanel.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainApp.resx">
       <DependentUpon>MainApp.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +160,30 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\ActionClickPanel.resx">
+      <DependentUpon>ActionClickPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ActionIfPicturePanel.resx">
+      <DependentUpon>ActionIfPicturePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ActionKeyPanel.resx">
+      <DependentUpon>ActionKeyPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ActionLoopPanel.resx">
+      <DependentUpon>ActionLoopPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ActionPictureWaitPanel.resx">
+      <DependentUpon>ActionPictureWaitPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ActionSequencePanel.resx">
+      <DependentUpon>ActionSequencePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ActionView.resx">
+      <DependentUpon>ActionView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ActionWaitPanel.resx">
+      <DependentUpon>ActionWaitPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -127,5 +212,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
