--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <TargetFrameworkProfile />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,10 +26,8 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -69,7 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bot.cs" />
+    <Compile Include="Controller\Bot.cs" />
     <Compile Include="Controller\HotKeyController.cs" />
     <Compile Include="Controller\ActionController.cs" />
     <Compile Include="Controller\ActionClickController.cs" />
@@ -82,11 +82,27 @@
     <Compile Include="Controller\ImageSearchController.cs" />
     <Compile Include="Controller\IniFile.cs" />
     <Compile Include="Controller\SequenceController.cs" />
+    <Compile Include="Controller\SettingsController.cs" />
+    <Compile Include="Import\DarkModeCS.cs" />
+    <Compile Include="Import\FlatComboBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Import\FlatTabControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Import\Messenger.cs" />
+    <Compile Include="Model\Constants.cs" />
     <Compile Include="Model\Hotkey.cs" />
     <Compile Include="Properties\strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>strings.resx</DependentUpon>
+    </Compile>
+    <Compile Include="View\About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
     </Compile>
     <Compile Include="View\DrawingRectangle.cs">
       <SubType>Form</SubType>
@@ -173,6 +189,9 @@
     <EmbeddedResource Include="Properties\strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\About.resx">
+      <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\DrawingRectangle.resx">
       <DependentUpon>DrawingRectangle.cs</DependentUpon>
@@ -265,6 +284,9 @@
   <ItemGroup>
     <None Include="Resources\icons8-keypad-48.png" />
     <None Include="Resources\icons8-info-48.png" />
+    <None Include="Resources\icons8-do-not-disturb-481.png" />
+    <None Include="Resources\icons8-file-481.png" />
+    <None Include="Resources\icons8-pencil-drawing-481.png" />
     <Content Include="Resources\tao.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
