--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -75,7 +75,7 @@
     <Compile Include="Controller\ActionLoopController.cs" />
     <Compile Include="Controller\ActionImageSearchController.cs" />
     <Compile Include="Controller\ActionSequenceController.cs" />
-    <Compile Include="Controller\ActionKeyController.cs" />
+    <Compile Include="Controller\ActionTextController.cs" />
     <Compile Include="Controller\ActionWaitController.cs" />
     <Compile Include="Controller\ImageSearchController.cs" />
     <Compile Include="Controller\IniFile.cs" />
@@ -122,7 +122,7 @@
     <Compile Include="Model\ActionPictureWait.cs" />
     <Compile Include="Model\ActionSequence.cs" />
     <Compile Include="Model\ActionImageSearch.cs" />
-    <Compile Include="Model\ActionKey.cs" />
+    <Compile Include="Model\ActionText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Sequence.cs" />
@@ -139,11 +139,11 @@
     <Compile Include="View\ActionImageSearchPanel.Designer.cs">
       <DependentUpon>ActionImageSearchPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\ActionKeyPanel.cs">
+    <Compile Include="View\ActionTextPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\ActionKeyPanel.Designer.cs">
-      <DependentUpon>ActionKeyPanel.cs</DependentUpon>
+    <Compile Include="View\ActionTextPanel.Designer.cs">
+      <DependentUpon>ActionTextPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="View\ActionLoopPanel.cs">
       <SubType>UserControl</SubType>
@@ -211,8 +211,8 @@
     <EmbeddedResource Include="View\ActionImageSearchPanel.resx">
       <DependentUpon>ActionImageSearchPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionKeyPanel.resx">
-      <DependentUpon>ActionKeyPanel.cs</DependentUpon>
+    <EmbeddedResource Include="View\ActionTextPanel.resx">
+      <DependentUpon>ActionTextPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\ActionLoopPanel.resx">
       <DependentUpon>ActionLoopPanel.cs</DependentUpon>
@@ -288,7 +288,7 @@
 xcopy /Y ..\..\..\README.txt
 xcopy /Y C:\ImageSearchDLL.dll
 del *.pdb *.config *.zip
-tar -acvf ..\..\..\TaoBotMaker_v0.4.19.2.zip *
+tar -acvf ..\..\..\TaoBotMaker_v0.4.20.zip *
 cd ..\..\..</PostBuildEvent>
   </PropertyGroup>
 </Project>
