--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -66,24 +66,11 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsInput, Version=1.0.4.0, Culture=neutral, PublicKeyToken=9b287f7dc5073cad, processorArchitecture=MSIL">
+      <HintPath>..\packages\InputSimulator.1.0.4.0\lib\net20\WindowsInput.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\ActionKeyController.cs" />
-    <Compile Include="Controller\Bot.cs" />
-    <Compile Include="Controller\HotKeyController.cs" />
-    <Compile Include="Controller\ActionController.cs" />
-    <Compile Include="Controller\ActionClickController.cs" />
-    <Compile Include="Controller\ActionLoopController.cs" />
-    <Compile Include="Controller\ActionImageSearchController.cs" />
-    <Compile Include="Controller\ActionSequenceController.cs" />
-    <Compile Include="Controller\ActionTextController.cs" />
-    <Compile Include="Controller\ActionWaitController.cs" />
-    <Compile Include="Controller\ImageSearchController.cs" />
-    <Compile Include="Controller\IniFile.cs" />
-    <Compile Include="Controller\Log.cs" />
-    <Compile Include="Controller\SequenceController.cs" />
-    <Compile Include="Controller\SettingsController.cs" />
-    <Compile Include="Controller\Utils.cs" />
     <Compile Include="Import\DarkModeCS.cs" />
     <Compile Include="Import\FlatComboBox.cs">
       <SubType>Component</SubType>
@@ -92,119 +79,30 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Import\Messenger.cs" />
-    <Compile Include="Model\ActionIfPicture.cs" />
-    <Compile Include="Model\ActionKey.cs" />
-    <Compile Include="Model\ComboboxItemActionType.cs" />
-    <Compile Include="Model\Constants.cs" />
-    <Compile Include="Model\Hotkey.cs" />
+    <Compile Include="Model\BotAction.cs" />
+    <Compile Include="Actions\ImageAction.cs" />
+    <Compile Include="Actions\KeyAction.cs" />
+    <Compile Include="Actions\MouseAction.cs" />
+    <Compile Include="Actions\SequenceAction.cs" />
+    <Compile Include="Actions\TextAction.cs" />
+    <Compile Include="Actions\WaitAction.cs" />
     <Compile Include="Properties\strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>strings.resx</DependentUpon>
     </Compile>
-    <Compile Include="View\About.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\About.Designer.cs">
-      <DependentUpon>About.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\ActionKeyPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\ActionKeyPanel.Designer.cs">
-      <DependentUpon>ActionKeyPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\DrawingRectangle.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\MainApp.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\MainApp.Designer.cs">
-      <DependentUpon>MainApp.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Model\Action.cs" />
-    <Compile Include="Model\ActionWait.cs" />
-    <Compile Include="Model\ActionLoop.cs" />
-    <Compile Include="Model\ActionClick.cs" />
-    <Compile Include="Model\ActionPictureWait.cs" />
-    <Compile Include="Model\ActionSequence.cs" />
-    <Compile Include="Model\ActionImageSearch.cs" />
-    <Compile Include="Model\ActionText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Sequence.cs" />
-    <Compile Include="Controller\SequenceXmlManager.cs" />
-    <Compile Include="View\ActionClickPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\ActionClickPanel.Designer.cs">
-      <DependentUpon>ActionClickPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\ActionImageSearchPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\ActionImageSearchPanel.Designer.cs">
-      <DependentUpon>ActionImageSearchPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\ActionTextPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\ActionTextPanel.Designer.cs">
-      <DependentUpon>ActionTextPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\ActionLoopPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\ActionLoopPanel.Designer.cs">
-      <DependentUpon>ActionLoopPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\ActionSequencePanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\ActionSequencePanel.Designer.cs">
-      <DependentUpon>ActionSequencePanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\ActionView.cs">
+    <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\ActionView.Designer.cs">
-      <DependentUpon>ActionView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\ActionWaitPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\ActionWaitPanel.Designer.cs">
-      <DependentUpon>ActionWaitPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\SaveSequenceView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\SaveSequenceView.Designer.cs">
-      <DependentUpon>SaveSequenceView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\HotkeyView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\HotkeyView.Designer.cs">
-      <DependentUpon>HotkeyView.cs</DependentUpon>
+    <Compile Include="View\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\strings.fr.resx" />
     <EmbeddedResource Include="Properties\strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>strings.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\About.resx">
-      <DependentUpon>About.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionKeyPanel.resx">
-      <DependentUpon>ActionKeyPanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\DrawingRectangle.resx">
-      <DependentUpon>DrawingRectangle.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\MainApp.resx">
-      <DependentUpon>MainApp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -216,33 +114,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\ActionClickPanel.resx">
-      <DependentUpon>ActionClickPanel.cs</DependentUpon>
+    <EmbeddedResource Include="View\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionImageSearchPanel.resx">
-      <DependentUpon>ActionImageSearchPanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionTextPanel.resx">
-      <DependentUpon>ActionTextPanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionLoopPanel.resx">
-      <DependentUpon>ActionLoopPanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionSequencePanel.resx">
-      <DependentUpon>ActionSequencePanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionView.resx">
-      <DependentUpon>ActionView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\ActionWaitPanel.resx">
-      <DependentUpon>ActionWaitPanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\SaveSequenceView.resx">
-      <DependentUpon>SaveSequenceView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\HotkeyView.resx">
-      <DependentUpon>HotkeyView.cs</DependentUpon>
-    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -292,6 +167,9 @@
     <None Include="Resources\icons8-file-481.png" />
     <None Include="Resources\icons8-pencil-drawing-481.png" />
     <Content Include="Resources\tao.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controller\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
