--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -55,8 +55,36 @@
     <Reference Include="LogFramework">
       <HintPath>..\..\..\Log\LogFramework\bin\Debug\LogFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Encodings.Web, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Text.Encodings.Web.8.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,11 +94,17 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsInput, Version=1.0.4.0, Culture=neutral, PublicKeyToken=9b287f7dc5073cad, processorArchitecture=MSIL">
-      <HintPath>..\packages\InputSimulator.1.0.4.0\lib\net20\WindowsInput.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\MainFormController.cs" />
+    <Compile Include="Controller\SequenceController.cs" />
+    <Compile Include="Controller\HotkeyController.cs" />
+    <Compile Include="Helpers\CoordinateHelper.cs" />
+    <Compile Include="Helpers\ImageSearchHelper.cs" />
+    <Compile Include="Helpers\KeyboardSimulator.cs" />
+    <Compile Include="Helpers\MouseSimulator.cs" />
+    <Compile Include="Model\ActionConverter.cs" />
+    <Compile Include="Model\ActionTypes.cs" />
     <Compile Include="Import\DarkModeCS.cs" />
     <Compile Include="Import\FlatComboBox.cs">
       <SubType>Component</SubType>
@@ -79,13 +113,17 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Import\Messenger.cs" />
-    <Compile Include="Model\BotAction.cs" />
+    <Compile Include="Model\Action.cs" />
     <Compile Include="Actions\ImageAction.cs" />
     <Compile Include="Actions\KeyAction.cs" />
     <Compile Include="Actions\MouseAction.cs" />
     <Compile Include="Actions\SequenceAction.cs" />
     <Compile Include="Actions\TextAction.cs" />
     <Compile Include="Actions\WaitAction.cs" />
+    <Compile Include="Model\Hotkey.cs" />
+    <Compile Include="Model\ISequenceRepository.cs" />
+    <Compile Include="Model\Sequence.cs" />
+    <Compile Include="Model\SequenceRepository.cs" />
     <Compile Include="Properties\strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -93,11 +131,54 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\IActionPropertiesPanel.cs" />
+    <Compile Include="View\AddActionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AddActionForm.Designer.cs">
+      <DependentUpon>AddActionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\KeyActionPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\KeyActionPropertiesPanel.Designer.cs">
+      <DependentUpon>KeyActionPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\SequenceActionPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\SequenceActionPropertiesPanel.Designer.cs">
+      <DependentUpon>SequenceActionPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ImageActionPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ImageActionPropertiesPanel.Designer.cs">
+      <DependentUpon>ImageActionPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\WaitActionPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\WaitActionPropertiesPanel.Designer.cs">
+      <DependentUpon>WaitActionPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\TextActionPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\TextActionPropertiesPanel.Designer.cs">
+      <DependentUpon>TextActionPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\MouseActionPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\MouseActionPropertiesPanel.Designer.cs">
+      <DependentUpon>MouseActionPropertiesPanel.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\strings.fr.resx" />
     <EmbeddedResource Include="Properties\strings.resx">
@@ -114,8 +195,29 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\AddActionForm.resx">
+      <DependentUpon>AddActionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\KeyActionPropertiesPanel.resx">
+      <DependentUpon>KeyActionPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SequenceActionPropertiesPanel.resx">
+      <DependentUpon>SequenceActionPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ImageActionPropertiesPanel.resx">
+      <DependentUpon>ImageActionPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\WaitActionPropertiesPanel.resx">
+      <DependentUpon>WaitActionPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\TextActionPropertiesPanel.resx">
+      <DependentUpon>TextActionPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\MouseActionPropertiesPanel.resx">
+      <DependentUpon>MouseActionPropertiesPanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -168,9 +270,7 @@
     <None Include="Resources\icons8-pencil-drawing-481.png" />
     <Content Include="Resources\tao.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controller\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>cd "Tao Bot Maker"\bin\Release
