--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Controller\HotkeyController.cs" />
     <Compile Include="Controller\SettingsController.cs" />
     <Compile Include="Helpers\CoordinateHelper.cs" />
+    <Compile Include="Helpers\CultureManager.cs" />
     <Compile Include="Helpers\ImageSearchHelper.cs" />
     <Compile Include="Helpers\KeyboardSimulator.cs" />
     <Compile Include="Helpers\Logger.cs" />
@@ -129,10 +130,10 @@
     <Compile Include="Model\Setting.cs" />
     <Compile Include="Model\Settings.cs" />
     <Compile Include="Model\SettingsType.cs" />
-    <Compile Include="Properties\strings.Designer.cs">
+    <Compile Include="Resources\Strings1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>strings.resx</DependentUpon>
+      <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -210,10 +211,10 @@
     <Compile Include="View\Settings\GeneralSettingsPropertiesPanel.Designer.cs">
       <DependentUpon>GeneralSettingsPropertiesPanel.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Properties\strings.fr.resx" />
-    <EmbeddedResource Include="Properties\strings.resx">
+    <EmbeddedResource Include="Resources\Strings.fr.resx" />
+    <EmbeddedResource Include="Resources\Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>strings.Designer.cs</LastGenOutput>
+      <LastGenOutput>Strings1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
