--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -98,7 +98,7 @@
     <Compile Include="Controller\SequenceController.cs" />
     <Compile Include="Controller\HotkeyController.cs" />
     <Compile Include="Controller\SettingsController.cs" />
-    <Compile Include="Helpers\CoordinateHelper.cs" />
+    <Compile Include="Helpers\CoordinatesHelper.cs" />
     <Compile Include="Helpers\CultureManager.cs" />
     <Compile Include="Helpers\ImageSearchHelper.cs" />
     <Compile Include="Helpers\KeyboardSimulator.cs" />
@@ -173,6 +173,12 @@
     <Compile Include="View\Action\ImageActionPropertiesPanel.Designer.cs">
       <DependentUpon>ImageActionPropertiesPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\DrawingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\DrawingForm.Designer.cs">
+      <DependentUpon>DrawingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -237,6 +243,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\ActionForm.resx">
       <DependentUpon>ActionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\DrawingForm.resx">
+      <DependentUpon>DrawingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
