Add: Drag and Drop action in actionListBox to reorder actions

--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Actions\SequenceAction.cs" />
     <Compile Include="Actions\TextAction.cs" />
     <Compile Include="Actions\WaitAction.cs" />
-    <Compile Include="Model\CustomTypeItem.cs" />
+    <Compile Include="Model\CustomDisplayItem.cs" />
     <Compile Include="Model\Hotkey.cs" />
     <Compile Include="Model\ISequenceRepository.cs" />
     <Compile Include="Model\Sequence.cs" />
