--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -322,6 +322,8 @@
     <None Include="Resources\icons8-file-481.png" />
     <None Include="Resources\icons8-pencil-drawing-481.png" />
     <None Include="Resources\icons8-pause-button-48.png" />
+    <None Include="Resources\icons8-sort-up-48.png" />
+    <None Include="Resources\icons8-sort-down-48.png" />
     <Content Include="Resources\tao.ico" />
   </ItemGroup>
   <ItemGroup />
